Fixed sidebar z-index

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -54,6 +54,9 @@
       position: absolute;
       margin: auto;
       z-index: -1;
+      @include mobile {
+        display: none;
+      }
     }
 
     form {
