--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -68,7 +68,7 @@
     height: 100%;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 10%;
 
     @include mobile {
       height: 50%;
