--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -6,7 +6,7 @@
   background-color: black;
   color: black;
   .bg {
-    z-index: 3;
+    z-index: 5;
     position: fixed;
     top: 0;
     left: 0;
@@ -30,7 +30,7 @@
     }
   }
   button {
-    z-index: 3;
+    z-index: 5;
     width: 50px;
     height: 50px;
     border-radius: 50%;
